--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
-  "homepage": "https://kjdominick66.github.io/my-portfolio",
+  "homepage": "https://kjdominick66.github.io/my-portfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
